force-app/main/default/objects/Content__c/Content__c.object-meta.xml
<CustomObject>
    <description>Stores all streaming content — movies, series, documentaries available on StreamForce platform</description>
    <label>Content</label>
    <nameField>
        <label>Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>