force-app/main/default/objects/Content__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Movie</fullName><default>false</default><label>Movie</label></value>
            <value><fullName>Series</fullName><default>false</default><label>Series</label></value>
            <value><fullName>Documentary</fullName><default>false</default><label>Documentary</label></value>
            <value><fullName>Short</fullName><default>false</default><label>Short</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>