force-app/main/default/objects/Content__c/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <label>Director</label>
    <length>255</length>
    <type>Text</type>
</CustomField>