force-app/main/default/objects/Content__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <label>Genre</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Action</fullName><default>false</default><label>Action</label></value>
            <value><fullName>Comedy</fullName><default>false</default><label>Comedy</label></value>
            <value><fullName>Drama</fullName><default>false</default><label>Drama</label></value>
            <value><fullName>Horror</fullName><default>false</default><label>Horror</label></value>
            <value><fullName>Sci-Fi</fullName><default>false</default><label>Sci-Fi</label></value>
            <value><fullName>Thriller</fullName><default>false</default><label>Thriller</label></value>
            <value><fullName>Romance</fullName><default>false</default><label>Romance</label></value>
            <value><fullName>Animation</fullName><default>false</default><label>Animation</label></value>
            <value><fullName>Crime</fullName><default>false</default><label>Crime</label></value>
            <value><fullName>Fantasy</fullName><default>false</default><label>Fantasy</label></value>
            <value><fullName>Documentary</fullName><default>false</default><label>Documentary</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>