force-app/main/default/objects/Content__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>English</fullName><default>true</default><label>English</label></value>
            <value><fullName>Hindi</fullName><default>false</default><label>Hindi</label></value>
            <value><fullName>Spanish</fullName><default>false</default><label>Spanish</label></value>
            <value><fullName>French</fullName><default>false</default><label>French</label></value>
            <value><fullName>Korean</fullName><default>false</default><label>Korean</label></value>
            <value><fullName>Japanese</fullName><default>false</default><label>Japanese</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>