force-app/main/default/objects/Content__c/fields/Release_Year__c.field-meta.xml
<CustomField>
    <fullName>Release_Year__c</fullName>
    <label>Release Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>